--- a/STM32F746G_DISCO.ioc
+++ b/STM32F746G_DISCO.ioc
@@ -71,6 +71,7 @@ Mcu.IP10=NVIC
 Mcu.IP11=QUADSPI
 Mcu.IP12=RCC
 Mcu.IP13=SYS
+Mcu.IP14=USART6
 Mcu.IP2=DMA2D
 Mcu.IP3=ETH
 Mcu.IP4=FMC
@@ -79,7 +80,7 @@ Mcu.IP6=I2C3
 Mcu.IP7=LIBJPEG
 Mcu.IP8=LTDC
 Mcu.IP9=LWIP
-Mcu.IPNb=14
+Mcu.IPNb=15
 Mcu.Name=STM32F746NGHx
 Mcu.Package=TFBGA216
 Mcu.Pin0=PE4
@@ -208,6 +209,7 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true\:false
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM6_DAC_IRQn
 NVIC.TimeBaseIP=TIM6
+NVIC.USART6_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 PA1.Mode=RMII
 PA1.Signal=ETH_REF_CLK
@@ -237,16 +239,12 @@ PC4.Mode=RMII
 PC4.Signal=ETH_RXD0
 PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
-PC6.GPIOParameters=GPIO_Speed,GPIO_Label
-PC6.GPIO_Label=RENDER_TIME
-PC6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC6.Locked=true
-PC6.Signal=GPIO_Output
-PC7.GPIOParameters=GPIO_Speed,GPIO_Label
-PC7.GPIO_Label=FRAME_RATE
-PC7.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PC6.Mode=Asynchronous
+PC6.Signal=USART6_TX
 PC7.Locked=true
-PC7.Signal=GPIO_Output
+PC7.Mode=Asynchronous
+PC7.Signal=USART6_RX
 PD0.Signal=FMC_D2_DA2
 PD1.Signal=FMC_D3_DA3
 PD10.Signal=FMC_D15_DA15
@@ -434,7 +432,7 @@ ProjectManager.StackSize=0xA00
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_DMA2D_Init-DMA2D-false-HAL-true,5-MX_FMC_Init-FMC-false-HAL-true,6-MX_I2C3_Init-I2C3-false-HAL-true,7-MX_LTDC_Init-LTDC-false-HAL-true,8-MX_QUADSPI_Init-QUADSPI-false-HAL-true,9-MX_LIBJPEG_Init-LIBJPEG-false-HAL-false,11-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0-false-HAL-false,12-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_CRC_Init-CRC-false-HAL-true,4-MX_DMA2D_Init-DMA2D-false-HAL-true,5-MX_FMC_Init-FMC-false-HAL-true,6-MX_I2C3_Init-I2C3-false-HAL-true,7-MX_LTDC_Init-LTDC-false-HAL-true,8-MX_QUADSPI_Init-QUADSPI-false-HAL-true,9-MX_LIBJPEG_Init-LIBJPEG-false-HAL-false,10-MX_LWIP_Init-LWIP-false-HAL-false,11-MX_TouchGFX_Init-STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0-false-HAL-false,12-MX_TouchGFX_Process-STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 QUADSPI.ChipSelectHighTime=QSPI_CS_HIGH_TIME_6_CYCLE
 QUADSPI.ClockPrescaler=1
 QUADSPI.FifoThreshold=4
@@ -593,6 +591,8 @@ STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0.tgfx_video_strategy=2
 STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0.tgfx_video_width=480
 STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0.tgfx_vsync=vsync_ltdc
 STMicroelectronics.X-CUBE-TOUCHGFX.4.20.0_SwParameter=ApplicationCcGraphicsJjApplication\:TouchGFXOoGenerator;
+USART6.IPParameters=VirtualMode-Asynchronous
+USART6.VirtualMode-Asynchronous=VM_ASYNC
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_DMA2D_VS_DMA2D.Mode=DMA2D_Activate
